--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-pager-view": "^6.2.2",
+    "react-native-paper": "^5.11.1",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.1",
     "react-native-webview": "^13.6.2"
   },
   "devDependencies": {
